test/SemanticAnalysis/Class/ThisInNonMethodFunction.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

void function() {
	// CHECK: .loci:6:16: error: cannot access 'this' in non-method function
	unused_result this;
}

// CHECK: 1 error generated.
